--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+    <div id="form">
+        <input type="text" placeholder="inserisci il nome" id="new-name">
+        <input type="text" placeholder="inserisci il cognome" id="new-surname">
+        <input type="text" placeholder="inserisci l'età" id="new-age">
+        <button id="send">Genera il nuovo studente</button>
+    </div>
     <h2 id="display-element"></h2>
     <script src="script.js"></script>
 </body>
