--- a/index.html
+++ b/index.html
@@ -5,17 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
 <body>
-    <div id="form">
-        <input type="text" placeholder="inserisci il nome" id="new-name">
-        <input type="text" placeholder="inserisci il cognome" id="new-surname">
-        <input type="text" placeholder="inserisci l'età" id="new-age">
+    <div id="form" class="d-flex justify-content-between flex-column align-items-center p-5 flex-wrap">
+        <input type="text" placeholder="inserisci il nome" id="new-name" class="col-12 m-3">
+        <input type="text" placeholder="inserisci il cognome" id="new-surname" class="col-12 m-3">
+        <input type="text" placeholder="inserisci l'età" id="new-age" class="col-12 m-3">
         <button id="send">Genera il nuovo studente</button>
     </div>
-    <h2 id="display-element"></h2>
+    <h2 id="display-element" class="p-5"></h2>
+    <h2 id="new-display" class="px-5"></h2>
     <script src="script.js"></script>
 </body>
 
