--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <body>
     <div id="form" class="d-flex justify-content-between flex-column align-items-center p-5 flex-wrap">
-        <input type="text" placeholder="inserisci il nome" id="new-name" class="col-12 m-3">
-        <input type="text" placeholder="inserisci il cognome" id="new-surname" class="col-12 m-3">
-        <input type="text" placeholder="inserisci l'età" id="new-age" class="col-12 m-3">
+        <input type="text" placeholder="inserisci il nome" id="new-name" class="col-12">
+        <input type="text" placeholder="inserisci il cognome" id="new-surname" class="col-12">
+        <input type="text" placeholder="inserisci l'età" id="new-age" class="col-12">
         <button id="send">Genera il nuovo studente</button>
     </div>
     <h2 id="display-element" class="p-5"></h2>
